tests/out/error/import/not_exists.in.bt
import bait.this_should_not_exist
